[package]
name = "ucloud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] } 
tokio = { version = "1.18", features = [ "rt", "macros", "rt-multi-thread" ] }
once_cell = "*"
anyhow = "*"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.5"
tower = "0.4"